# AiSD

./: CMakeLists.txt  README.md  bucket_sort.cpp  bucket_sort.h  heap_sort.cpp  heap_sort.h  insert_sort.cpp  insert_sort.h  main.cpp  merge_sort.cpp  merge_sort.h  merge_sort_iteracyjne.cpp  merge_sort_iteracyjne.h  quick_sort.cpp  quick_sort.h  simple_bucket_sort.cpp  simple_bucket_sort.h  table_based_sort.cpp  table_based_sort.h
